Redmine Issue 863 PURPOSE: Browse Specimens Styling DESCRIPTION:  truncate text css

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -2353,6 +2353,11 @@ div.vslider-item[aria-hidden="true"]{
     -webkit-box-orient: vertical;
     overflow: hidden;
 }
+.text-truncate1 {
+	    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
 
 
 
